[package]
name = "ciris-edge"
version = "0.19.0"
edition = "2021"
rust-version = "1.75"
authors = ["Eric Moore <mooreericnyc@gmail.com>"]
license = "AGPL-3.0-or-later"
description = "Reticulum-native federation transport for the CIRIS stack"
repository = "https://github.com/CIRISAI/CIRISEdge"
readme = "README.md"
publish = false

# Status: v0.4.0 — authenticated Reticulum peer resolution. The
# PeerResolver cold-start path (CIRISEdge#15 / CIRISVerify#28 Phase 3)
# replaces v0.3.1's trust-on-first-use announce-recording: an announce
# carries a federation-key-signed transport-identity attestation that
# the resolver roots against persist's federation_keys directory
# (ciris-persist v1.12.0 `root_binding`) before verifying the
# attestation signature — AV-42 closure. Verify pipeline, durable
# outbound queue + dispatcher, typed handler dispatch, outbound
# inline-text pipeline, HTTP transport, and the Reticulum transport
# (Leviculum-backed; OQ-07) all shipped. PyO3 surface and Phase 3
# multi-medium transports (LoRa / serial / I²P) follow.
# See FSD/CIRIS_EDGE.md for the architecture, MISSION.md for M-1
# alignment per module, docs/THREAT_MODEL.md for the v0.1.0 P0
# invariants (AV-9 + AV-13 + AV-14 + AV-17 + hybrid-verify-via-persist)
# and AV-42 for the authenticated-binding cold-start path.

[dependencies]
# Substrate. Owns federation_keys directory, canonicalize_envelope,
# steward seeds (OS-keyring), verify_hybrid_via_directory primitive,
# edge_outbound_queue table + Engine surface for send_durable.
# v2.7.0 (CIRISPersist#104/#105/#106/#108/#109) shipped the PyCapsule
# cohabitation accessors — `federation_directory_capsule` /
# `outbound_queue_capsule` / `keyring_signer_capsule` `#[pymethod]`s
# on `PyEngine` — that v0.9.2 edge consumes to construct an `Edge`
# over the host's already-bootstrapped engine WITHOUT relying on
# cross-module PyClass identity (the v0.9.1 cohabitation regression).
# v2.8.0 (CIRISPersist#111) adds `runtime_handle_capsule` — the
# fourth capsule accessor that closes the cross-cdylib **statics**
# regression v0.10.0 hit: persist's `ENGINE_SINGLETON` static is
# duplicated per-`.so`, so the consumer's `current_runtime_handle()`
# always returned `None` in cross-wheel production deployments
# (CIRISConformance v0.10.0 init_handshake failure). The capsule
# sources the runtime from `self.runtime.handle().clone()`,
# sidestepping the static lookup entirely. v0.10.1 edge consumes
# this — see [`extract_capsule`] in `src/ffi/pyo3.rs`.
# Also exposes `list_keys_by_identity_type` on FederationDirectory
# (v2.6.0) — consumed by CIRISEdge#19 AccordCarrier wire-layer
# 2-of-3 verify (accord_holder enumeration) and #20 steward addressing
# (steward enumeration). The Option-B `pub fn` accessors
# (CIRISPersist#95, v2.0.2+) remain for sibling cdylibs that share
# persist's compiled-in PyTypeInfo; edge uses the capsule path
# because we cross extension-module boundaries (separate wheels).
# See ../CIRISPersist/MISSION.md and FSD/EDGE_OUTBOUND_QUEUE.md.
# v3.1.0 (CIRISPersist#117) — adds the 6 peer-mutation methods on
# `FederationDirectory` (`add_peer_record` / `remove_peer_record` /
# `update_peer_{alias,trust,notes,policy}`) plus the typed
# `TrustClass` + `PeerPolicyBlob` types + typed `PeerNotFound` /
# `HardRemoveWithActiveAttestations` errors. Closes the v0.13.0
# `PEER_MUTATION_FOLLOWUP` gap — CIRISEdge v0.15.1 flips the 6 UniFFI
# stubs in `src/ffi/uniffi_impl.rs:221-275` from `NotImplemented` to
# live calls. v3.1.1 also pulls #118 (put_edge_detection_event admission;
# unblocks CIRISEdge#39 emit_verdict at v0.13.1) and #119
# (local_signer_capsule for the ReticulumTransport identity handoff at
# v0.13.1).
# v3.2.0 (CIRISPersist#120) — adds the sibling `BlackholeRules` trait
# (`blackhole_list` / `_upsert` / `_remove` / `_record_hit` /
# `_prune_expired`) + V052 `cirislens.blackhole_rules` table giving
# CIRISEdge's `ReticulumTransport` a durable per-identity deny-list.
# CIRISEdge v0.16.1 flips the v0.15.0 in-memory
# `Arc<RwLock<HashMap<Vec<u8>, BlackholeRecord>>>` to
# `Arc<dyn BlackholeRules>` over the cohabitating engine's backend —
# the v0.15.0 acceptance criterion required durability. The trait is
# sibling to (not folded into) `FederationDirectory` because federation
# directory is about crypto identities + trust statements; blackhole is
# about transport-layer address denials (distinct concern, distinct
# lifetime). Both `SqliteBackend` + `PostgresBackend` implement it, so
# edge derives `Arc<dyn BlackholeRules>` from the same `BackendDispatch`
# arm `outbound_queue_capsule` already produces — no new capsule
# required (the capsule family stays at 6).
ciris-persist = { git = "https://github.com/CIRISAI/CIRISPersist", tag = "v3.2.0", version = "3", features = ["sqlite"] }
# Keyring — Ed25519 + ML-DSA-65 hardware/software signers used by
# Edge::send and Edge::send_durable to sign outbound envelopes.
# v0.13.0 — bumped to v4.0.0 in lockstep with persist v3.0.0. Both
# major bumps shipped together; pinning identically prevents two
# distinct PqcSigner traits from landing across the dep graph.
ciris-keyring = { git = "https://github.com/CIRISAI/CIRISVerify", tag = "v4.0.0", version = "4", features = ["software", "pqc-ml-dsa"] }
ciris-crypto  = { git = "https://github.com/CIRISAI/CIRISVerify", tag = "v4.0.0", version = "4", features = ["ed25519", "pqc-ml-dsa"] }

# Async runtime
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-trait = "0.1"
futures     = "0.3"

# Wire format / serde. RawValue is required for canonical-bytes
# preservation per FSD §3.4 — we sign canonical bytes and verify the
# exact same canonical bytes, never re-serializing a Value.
serde       = { version = "1", features = ["derive"] }
serde_json  = { version = "1", features = ["raw_value"] }
chrono      = { version = "0.4", features = ["serde"] }

# Hashing — body_sha256 forensic join key + in_reply_to ACK matching.
sha2        = "0.10"
base64      = "0.22"

# Errors / logs
thiserror   = "1"
tracing     = "0.1"

# IDs
uuid        = { version = "1", features = ["v4", "serde"] }

# CIRISEdge#47 (v0.17.0) — Short Authentication String (SAS) helper.
# `peer_sas` / `peer_sas_digits` produce a deterministic, order-
# independent representation of the (local_pub, peer_pub, protocol-
# constant) tuple so two operators can verbally confirm they share the
# same peer identity (MITM-resistant out-of-band verification).
# BIP39 English wordlist — 2048 words × 11 bits, 5 words ≈ 55 bits.
# License: Apache-2.0 / MIT (resolves under deny.toml § licenses.allow).
bip39       = "2"

# CIRISEdge#29 (v0.11.0) — `parking_lot::RwLock` backs
# `ReachabilityTracker`'s per-(peer, medium) map. Chosen over
# `dashmap` (extra license surface, contention-tuning we don't need)
# and `std::sync::RwLock` (slower uncontended path, less predictable
# fairness). Already a transitive dep via tokio's `parking_lot`
# feature; the explicit pin is a single MIT-licensed surface (per
# deny.toml § licenses.allow) and makes the dep audit-explicit.
parking_lot = "0.12"

# HTTP transport — feature-gated below
axum  = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
hyper = { version = "1",   optional = true, features = ["client", "server", "http1"] }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["rustls-tls", "json"] }

# CIRISEdge#23 (Track B / v0.13.0 cut) — HTTPS transport hardening.
# Promotes the `transport-http` feature from "Reticulum-unreachable
# fallback" to production-grade, fully-equivalent transport carrying
# every wire type. The acceptance bar is "every MessageType::*
# round-trips over HTTPS" — same `dispatch_inbound` pipeline.
#
# Server-side TLS: `axum-server` (rustls integration) accepts a
# `rustls::ServerConfig`; that config carries either a no-auth
# verifier (TLS-only) or a custom `ClientCertVerifier` whose
# `verify_client_cert` consults persist's `federation_keys`
# directory via `VerifyDirectory::lookup_public_key` and rejects
# unknown CNs at handshake time. This is the surface that CIRIS
# Accord §I (Fidelity & Transparency) requires for the mTLS deployment
# path — no application-layer auth running on top of an unauthenticated
# socket.
#
# Bearer-token path: `jsonwebtoken` decodes a federation-key-signed
# JWT (Ed25519 via `Algorithm::EdDSA`). The directory's
# `pubkey_ed25519_base64` is the verification key. Use behind
# TLS-terminating CDNs where mTLS isn't feasible.
#
# Licenses (verified against deny.toml § licenses.allow):
#   rustls 0.23.x         — Apache-2.0 / ISC / MIT (triple-licensed)
#   rustls-pemfile 2.x    — Apache-2.0 / ISC / MIT
#   tokio-rustls 0.26.x   — Apache-2.0 / MIT
#   axum-server 0.7.x     — MIT
#   jsonwebtoken 9.x      — MIT
#   x509-parser 0.16.x    — MIT / Apache-2.0
# All resolve under the existing allowlist (no deny.toml change).
rustls         = { version = "0.23", optional = true, default-features = false, features = ["std", "ring", "logging", "tls12"] }
rustls-pemfile = { version = "2",    optional = true }
tokio-rustls   = { version = "0.26", optional = true, default-features = false, features = ["ring", "logging", "tls12"] }
axum-server    = { version = "0.7",  optional = true, features = ["tls-rustls-no-provider"] }
jsonwebtoken   = { version = "9",    optional = true, default-features = false }
# `x509-parser` is the minimal X.509 sniff the mTLS verifier needs to
# pull CN + Ed25519 SPKI out of the client cert. Federation identity is
# rooted in persist (not a CA), so we don't need a full PKI engine —
# just a CN string and 32-byte raw key.
x509-parser    = { version = "0.16", optional = true }

# Reticulum transport — feature-gated below. Backed by Leviculum
# (reticulum-core + reticulum-std, workspace v0.6.3, AGPL-3.0), the
# canonical Reticulum stack for edge (OQ-07 first impl; Beechat's
# reticulum-rs was spiked and rejected — broken link data path).
#
# Pinned to the CIRISAI/leviculum fork rather than teranos/leviculum
# upstream: upstream's tree references a `vendor/Reticulum` git
# submodule at a SHA force-removed from markqvist/Reticulum, and cargo
# fetches a git dependency's submodules recursively — so the upstream
# repo cannot resolve as a cargo git dep. The fork strips the three
# dead integ-harness submodules (commit a7e1102); reticulum-core +
# reticulum-std build untouched. Fork tracks teranos/leviculum, whose
# base carries the macOS-compat commits edge's darwin CI needs.
reticulum-core = { git = "https://github.com/CIRISAI/leviculum", rev = "a7e11028af137229ce22490879a1a6fd45af7ebe", version = "0.6", optional = true }
reticulum-std  = { git = "https://github.com/CIRISAI/leviculum", rev = "a7e11028af137229ce22490879a1a6fd45af7ebe", version = "0.6", optional = true }

# v0.11.0 (CIRISEdge#31) — Identity FFI QR codec. `qrcodegen` is the
# canonical pure-Rust QR encoder (Apache-2.0, no_std, zero unsafe in
# the data path). We use it ONLY for `export_qr_payload` byte
# generation; the import side parses the structured envelope we
# packed in via `serde_json` and does not require pixel decoding.
qrcodegen = "1.8"

# v0.11.0 (CIRISEdge#34) — Async iterator bridge. `pyo3-async-runtimes`
# is the successor to `pyo3-asyncio` (renamed in 0.21+); pinned to
# 0.28 to match the `pyo3` 0.28 pin. Provides the
# `future_into_py` + `tokio::future_into_py` shims that turn a Rust
# `Future` into a Python `asyncio.Future`. The `subscribe_*`
# pymethods return a pyclass implementing `__aiter__` / `__anext__`;
# `__anext__` constructs a Python awaitable from a
# `tokio::sync::broadcast::Receiver::recv()` future via this crate.
# Gated under `pyo3` (only the AsyncIterator surface needs it).
pyo3-async-runtimes = { version = "0.28", optional = true, features = ["tokio-runtime"] }

# v0.11.0 (CIRISEdge#35) — Stub generator dependency. Runtime-side
# helpers used by `#[gen_stub_pyclass]` / `#[gen_stub_pymethods]` /
# `#[gen_stub_pyfunction]`. The matching `pyo3-stub-gen-derive` proc-
# macros are pulled transitively. We gate this under `pyo3` so a
# non-pyo3 build doesn't pull the registry machinery.
pyo3-stub-gen = { version = "0.22", optional = true, default-features = false }

# v0.13.0 (CIRISEdge#36 / #25 / #26 / #31 reads / #28 snapshot reads) —
# UniFFI bindings generator. The spike's NO-GO carve-out keeps PyO3 for
# `init_edge_runtime` (PyCapsule cohabitation, Bound<PyAny>), Tier 2
# GIL-drainer callbacks, AsyncIterator event stream, and `set_local_display_name` +
# QR import/export (Bound<PyAny> + complex Python-side state). Everything
# else — Transport mgmt (#25), Peer mgmt (#26), Identity reads (#31), and
# Observability snapshot reads (#28) — moves under UniFFI so the same UDL
# produces Python + Kotlin Multiplatform + Swift bindings from one source.
#
# Pinned to 0.31.1 — the version the spike validated. The companion
# `uniffi_build` (build-script side) generates the Rust-side scaffolding
# from `udl/ciris_edge.udl`.
#
# Licenses (verified against deny.toml § licenses.allow):
#   uniffi 0.31.x        — Apache-2.0 / MIT
#   uniffi_core          — Apache-2.0 / MIT
#   uniffi_macros        — Apache-2.0 / MIT
#   askama (transitive)  — Apache-2.0 / MIT
#   weedle2 (transitive) — Apache-2.0 / MIT
uniffi = { version = "=0.31.1", optional = true, features = ["build", "cli", "bindgen"] }

# ─── Optional transports — gated per OQ-02, OQ-07, OQ-13 ────────────
# Implementations land in subsequent commits; features declared now so
# downstream pin contracts are stable from v0.1.0.

[features]
default = []

# Phase 1 — HTTP/HTTPS fallback for Reticulum-unreachable deployments.
# CIRISEdge#23 (Track B / v0.13.0) — promoted to production-grade
# HTTPS transport: server-side TLS via axum-server, client-side TLS
# via reqwest's rustls stack, mTLS handshake checks the client cert's
# CN against persist's federation_keys via
# `VerifyDirectory::lookup_public_key`, and a bearer-token (federation-
# key-signed JWT) path covers CDN/TLS-termination deployments.
transport-http        = [
    "dep:axum",
    "dep:tower",
    "dep:hyper",
    "dep:reqwest",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:tokio-rustls",
    "dep:axum-server",
    "dep:jsonwebtoken",
    "dep:x509-parser",
]

# Phase 1 — Reticulum canonical wire (OQ-07 first impl). Backed by
# Leviculum's reticulum-core + reticulum-std. `TransportId::RETICULUM_RS`
# is the metrics tag; the impl lives in `src/transport/reticulum.rs`.
#
# v0.12.0 (CIRISEdge#24) — refactored from a single umbrella feature
# into per-interface sub-features. `transport-reticulum` remains the
# umbrella + back-compat alias (every existing pin "wants the Reticulum
# transport at all" still resolves); deployments that want a specific
# interface set turn on the sub-features they care about. The umbrella
# defaults to `transport-reticulum-auto` (the pre-v0.12.0 behaviour:
# AutoInterface = LAN auto-discovery via UDPv6 multicast).
#
# WIRED sub-features (have a `ReticulumInterfaceConfig` variant + Rust-
# side constructor that maps onto a `reticulum_std::driver::*` builder
# method or InterfaceConfig row):
#
#   transport-reticulum-auto         — `AutoInterface`
#   transport-reticulum-tcp-server   — `TcpServerInterface`
#   transport-reticulum-tcp-client   — `TcpClientInterface`
#   transport-reticulum-udp          — `UdpInterface`
#   transport-reticulum-local        — `LocalInterface` (AF_UNIX shared
#                                       instance; IPC cohabitation)
#   transport-reticulum-rnode        — `RNodeInterface` (LoRa via RNode;
#                                       config-driven only, leviculum
#                                       doesn't expose a Rust-side
#                                       `add_rnode` on the builder yet,
#                                       so we route via InterfaceConfig)
#   transport-reticulum-i2p          — `I2PInterface` (Phase 3 per
#                                       OQ-13; gate exists, runtime
#                                       impl deferred — building with
#                                       just this flag links the gate
#                                       but `add_reticulum_interface`
#                                       returns `TransportError::Config`
#                                       when handed an `I2p` variant)
#
# DEFERRED (gates may be added in a future cut once community demand
# materializes; per the v0.12.0 brief, kiss / ax25_kiss / serial / pipe
# / backbone are not implemented):
#
#   transport-reticulum-kiss      — KISS framing (AX.25 packet radio)
#   transport-reticulum-ax25-kiss — AX.25 over KISS
#   transport-reticulum-serial    — raw serial line
#   transport-reticulum-pipe      — Unix named pipe
#   transport-reticulum-backbone  — Reticulum "backbone" tunnel
# Umbrella feature `transport-reticulum`: links the Reticulum module,
# pulls in the leviculum deps, AND enables every wired sub-feature
# (per CIRISEdge#24's "The existing `transport-reticulum` feature
# becomes an umbrella that enables all of them" requirement).
# Deployments that need a smaller binary pick the specific
# `transport-reticulum-*` sub-feature(s) they want; existing pins
# like `transport-reticulum` keep working unchanged AND surface the
# full `ReticulumInterfaceConfig` variant set.
transport-reticulum             = [
    "transport-reticulum-auto",
    "transport-reticulum-tcp-server",
    "transport-reticulum-tcp-client",
    "transport-reticulum-udp",
    "transport-reticulum-local",
    "transport-reticulum-rnode",
    "transport-reticulum-i2p",
    "dep:reticulum-std",
    "dep:reticulum-core",
]
transport-reticulum-auto        = ["dep:reticulum-std", "dep:reticulum-core", "_reticulum-module"]
transport-reticulum-tcp-server  = ["dep:reticulum-std", "dep:reticulum-core", "_reticulum-module"]
transport-reticulum-tcp-client  = ["dep:reticulum-std", "dep:reticulum-core", "_reticulum-module"]
transport-reticulum-udp         = ["dep:reticulum-std", "dep:reticulum-core", "_reticulum-module"]
transport-reticulum-local       = ["dep:reticulum-std", "dep:reticulum-core", "_reticulum-module"]
transport-reticulum-rnode       = ["dep:reticulum-std", "dep:reticulum-core", "_reticulum-module"]
transport-reticulum-i2p         = ["dep:reticulum-std", "dep:reticulum-core", "_reticulum-module"]

# Internal aggregator — any reticulum-* sub-feature flips this on, and
# every cfg site in the code that needs "the Reticulum transport module
# in any flavor" gates on it. NOT a public feature (underscore prefix
# is the convention); consumers wire `transport-reticulum` (the
# umbrella) or a specific sub-feature. The umbrella ALSO enables this
# via its transitive `transport-reticulum-auto` dependency.
_reticulum-module               = []

# Phase 3 — additional transports, productionized when community uptake
# justifies (OQ-13). The bare wire-level transports (LoRa not via
# Reticulum, raw serial, I²P not via Reticulum) are separate from the
# `transport-reticulum-*` Reticulum-interface family above.
# transport-lora        = []
# transport-serial      = []
# transport-i2p         = []

# pyo3 — Python bindings for the lens FastAPI cutover (Phase 1)
# and the agent Python pipeline (Phase 2). Same FFI-shell discipline
# persist uses (CIRISPersist src/ffi/pyo3.rs); abi3 single-wheel
# per-(os,arch) ships via maturin.
#
# v0.5.0 — turns on `ciris-persist/pyo3` so `init_edge_runtime`
# (the CIRIS 3.0 cohabitation constructor, CIRISEdge#16) can reach
# `ciris_persist::ffi::pyo3::PyEngine` Rust-side. persist's `pyo3`
# feature also implies `postgres`; that is intentional — the
# cohabiting agent's `PyEngine` may carry either backend variant of
# `BackendDispatch` and edge must match both at runtime.
# `pyo3` implies `transport-reticulum` — the cohabitation `init_edge_runtime`
# (and its module-private imports) is the whole point of the Python surface,
# and Reticulum is the canonical cohabitation wire (MISSION §1.4). Without
# this, the maturin wheel build (`features = ["pyo3"]` per pyproject) leaves
# the reticulum-gated items unused and `-D warnings` fails the build.
pyo3                  = [
    "dep:pyo3",
    "dep:pyo3-async-runtimes",
    "dep:pyo3-stub-gen",
    "ciris-persist/pyo3",
    "transport-reticulum",
    # v0.13.0 — wheel builds get the UniFFI surface by default. Per the
    # spike's GO decision (CIRISEdge#36): the Python wheel exposes BOTH
    # `from ciris_edge import PyEdge` (PyO3 entry + Tier 2 GIL-drainer
    # callbacks + AsyncIterator event stream) AND
    # `from ciris_edge.uniffi_bindings import peer_list, transport_list, ...`
    # (UniFFI-bundled #25 + #26 + #31 reads + #28 snapshot reads).
    # Mobile / native consumers can still build pure-UniFFI by enabling
    # only `ffi-uniffi`; that lane is a strict subset of the wheel-build
    # symbol set so the .so name and bindings are stable.
    "ffi-uniffi",
]

# v0.13.0 (CIRISEdge#36 GO) — UniFFI bindings surface. Generates the
# Rust-side scaffolding from `udl/ciris_edge.udl` at build time via
# `build.rs` (which invokes `uniffi::generate_scaffolding`). The
# language-side bindings (`bindings/python/ciris_edge.py` +
# `bindings/kotlin/ai/ciris/edge/ciris_edge.kt` +
# `bindings/swift/ciris_edge.swift`) are committed to the repo so
# consumers don't need `uniffi-bindgen` on their build host; a CI
# drift gate (`.github/workflows/ci.yml` job `uniffi-drift`)
# regenerates them and `git diff --exit-code`s the three files.
ffi-uniffi            = ["dep:uniffi"]

# v0.7.0 (CIRISEdge#17) — `extension-module` split out of the `pyo3`
# feature, mirroring CIRISPersist's discipline (persist v2.0.6+).
# `pyo3/extension-module` tells PyO3 not to link libpython, which is
# correct for wheel builds (the host interpreter provides the symbols
# at import time) but breaks `cargo test --features pyo3` because tests
# need to link libpython for in-process Python-from-Rust embedding.
# Wheel builds invoke `--features "pyo3 extension-module"`; test +
# lint builds invoke `--features pyo3` and link libpython normally.
# pyproject.toml's `[tool.maturin]` features list adds the extra flag.
extension-module      = ["pyo3?/extension-module"]

# v0.13.0 (CIRISEdge#36 GO) — UniFFI build-script side. The companion
# `uniffi` runtime dep provides the runtime scaffolding; this build-deps
# pin gives `build.rs` access to `uniffi::generate_scaffolding` against
# `udl/ciris_edge.udl`. Pinned to 0.31.1 — UniFFI requires matched
# versions across the build/runtime boundary; mismatch produces a
# "uniffi version skew" link error.
#
# Note: `[build-dependencies]` ignores Cargo features, so this is
# always pulled. The build script itself short-circuits via
# `cargo:rerun-if-env-changed=CARGO_FEATURE_FFI_UNIFFI` and a runtime
# feature check; non-uniffi builds compile a no-op `build.rs` body so
# the only overhead is the build-time crate compile (one-time).
[build-dependencies]
uniffi = { version = "=0.31.1", features = ["build"] }

[dependencies.pyo3]
version  = "0.28"
# v0.7.0 (CIRISEdge#17) — `abi3-py310`, not `abi3-py311`. Chaquopy
# bundles Python 3.10 (Android mobile cohabitation, CIRISPersist#96–99
# precedent); abi3 is forward-compatible so a py310-tagged wheel runs
# on 3.11 / 3.12 / 3.13 too — bumping the floor down is purely an
# expansion of compatibility, not a regression for the existing PyPI
# consumers. `extension-module` removed from this list — it's now its
# own top-level feature (see above).
features = ["abi3-py310"]
optional = true

[lib]
# v0.1.0-pre1 — explicit crate-type so maturin can build the PyO3
# extension AND `cargo test` / downstream `cargo` consumers still
# get the `rlib`. Mirrors CIRISPersist Cargo.toml.
crate-type = ["cdylib", "rlib"]

# Build-manifest extras emitter — mirrors CIRISPersist's
# `emit_persist_extras` and CIRISLens's `emit_lens_extras.py`.
# Invoked by `.github/workflows/ci.yml::build-manifest` to produce
# the EdgeExtras JSON that ciris-build-sign embeds in the signed
# BuildManifest (OQ-12 closure).
[[bin]]
name = "emit_edge_extras"
path = "src/bin/emit_edge_extras.rs"

# v0.11.0 (CIRISEdge#35) — pyo3-stub-gen driver. Walks the inventory of
# `#[gen_stub_pyclass]` / `#[gen_stub_pymethods]` / `#[gen_stub_pyfunction]`
# items registered at link time and writes `python/ciris_edge/__init__.pyi`.
# Required-features = ["pyo3"] so the stub-gen helpers are linked in.
# CI gate: `cargo run --features pyo3 --bin stub_gen && git diff --exit-code python/ciris_edge/__init__.pyi`.
[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
required-features = ["pyo3"]

# v0.13.0 (CIRISEdge#36 GO) — local UniFFI bindgen driver. UniFFI 0.31
# no longer publishes a standalone `uniffi-bindgen` CLI on crates.io;
# the recommended pattern is each project compiles its own tiny driver
# that calls `uniffi::uniffi_bindgen_main()`. Invoked by the CI drift
# gate (`.github/workflows/ci.yml::uniffi-drift`) to regenerate
# `bindings/{python,kotlin,swift}/` and assert the result matches the
# committed files (`git diff --exit-code`).
[[bin]]
name = "uniffi_bindgen_cli"
path = "src/bin/uniffi_bindgen_cli.rs"
required-features = ["ffi-uniffi"]

# ─── Criterion benches (docs/BENCHMARKS.md) ─────────────────────────
#
# `harness = false` per criterion convention: disables Rust's default
# `#[test]` harness so criterion's own `criterion_main!()` runs.
# Bench files live in `benches/`; shared fixtures in `benches/common/`.
#
# Default-feature benches (no transport / no pyo3) — run on every
# `cargo bench --workspace`:
#
#   envelope_canonicalize, envelope_verify, dispatch_inbound,
#   outbound_enqueue, accord_threshold_verify, steward_fanout,
#   content_fetch_roundtrip, inline_text_pipeline
#
# Feature-gated benches — must be invoked with the matching `--features`:
#
#   transport_reticulum_loopback (transport-reticulum)
#   transport_http_loopback      (transport-http)
#   subscription_throughput      (pyo3)
#
# Per the BENCHMARKS.md "Running" section, the CI workflow
# (.github/workflows/bench.yml) drives all three feature sets in
# sequence.

[[bench]]
name = "envelope_canonicalize"
harness = false

[[bench]]
name = "envelope_verify"
harness = false

[[bench]]
name = "dispatch_inbound"
harness = false

[[bench]]
name = "outbound_enqueue"
harness = false

[[bench]]
name = "accord_threshold_verify"
harness = false

[[bench]]
name = "steward_fanout"
harness = false

[[bench]]
name = "content_fetch_roundtrip"
harness = false

[[bench]]
name = "inline_text_pipeline"
harness = false

[[bench]]
name = "subscription_throughput"
harness = false
required-features = ["pyo3"]

[[bench]]
name = "transport_reticulum_loopback"
harness = false
required-features = ["transport-reticulum"]

[[bench]]
name = "transport_http_loopback"
harness = false
required-features = ["transport-http"]

[dev-dependencies]
tokio    = { version = "1", features = ["full"] }
proptest = "1"
# Reticulum loopback + authenticated-resolution acceptance tests
# (tests/reticulum_loopback.rs, tests/reticulum_av42.rs). `hex`
# encodes the scrub-signed federation_keys rows the AV-42 cold-start
# fixtures seed the persist directory with.
tempfile           = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex                = "0.4"
sha2               = "0.10"
# v0.10.x — criterion bench harness (docs/BENCHMARKS.md). The
# `html_reports` feature produces the per-bench HTML report uploaded
# by .github/workflows/bench.yml as the `criterion-report` artifact;
# the text summary lands as `bench-results-txt`. Same cadence as
# CIRISVerify's bench.yml (push-to-main + workflow_dispatch).
criterion          = { version = "0.5", features = ["html_reports", "async_tokio"] }
async-trait        = "0.1"
# v0.6.0 — `tests/federation_announcement.rs` (CIRISEdge#18) drives
# persist's `put_delivery_attestation` / `list_delivery_attestations`
# admission surface — those methods live behind persist's `cirisnode`
# feature flag. Cargo merges dependency-feature sets, so adding the
# flag here lights up the symbols for the test-build only without
# changing edge's normal-build dependency surface.
#
# v0.10.x — `classify` + `scrub` features added so the
# `inline_text_pipeline` bench (docs/BENCHMARKS.md) can construct
# `default_outbound_pipeline::<InlineTextEnvelope>()` (Classify +
# Scrub) over the persist pipeline surface. Dev-deps only; the normal
# edge build does not pull these.
ciris-persist = { git = "https://github.com/CIRISAI/CIRISPersist", tag = "v3.2.0", version = "3", features = ["sqlite", "cirisnode", "classify", "scrub"] }
# CIRISEdge#23 — `tests/transport_http_hardening.rs` mints self-signed
# Ed25519 certs on the fly to exercise the rustls server config + the
# custom `FederationCnVerifier`. `rcgen` is the canonical Rust X.509
# generator; license: MIT / Apache-2.0. Dev-only — no production
# dep-tree impact.
rcgen              = { version = "0.13", default-features = false, features = ["pem", "ring"] }
# rcgen's `KeyPair::from_pkcs8_der_and_sign_algo` takes a
# `rustls_pki_types::PrivatePkcs8KeyDer`; explicit dev-dep so the
# test file can name the type.
rustls-pki-types   = "1"

[lints.rust]
# v0.9.2 (CIRISEdge#22 cohabitation) — relaxed from `forbid` to `deny`.
# `PyCapsule` extraction is the load-bearing primitive for cross-wheel
# cohabitation handoff (CIRISPersist#109) and is inherently unsafe at
# the FFI surface (no compile-time type check; the consumer trusts the
# producer's capsule name tag + wrapped type). The carve-out is
# scoped to the single `extract_capsule` helper in `src/ffi/pyo3.rs`;
# everywhere else in the crate, `unsafe` is still rejected.
#
# v0.13.0 (CIRISEdge#36 GO) — further relaxed to `allow` so the
# `uniffi::include_scaffolding!("ciris_edge")` macro can land its
# ~30 `#[unsafe(no_mangle)]` FFI shim items at the crate root without
# triggering the lint. Cargo's table-level lints can't be cfg-gated
# per-feature, so the relaxation applies uniformly; every hand-written
# `unsafe` site still carries its own audit comment + per-item `#[allow]`,
# so this only loosens the scaffolding-generated items.
unsafe_code = "allow"

[lints.clippy]
all     = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pragmatic relaxations:
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
module_name_repetitions = "allow"
# Skeleton-phase concessions — drop these when bodies fill in:
#  - unused_async: skeleton fns are async because their final form will be;
#    clippy can't see through todo!() to the eventual .await calls.
#  - doc_markdown: pedantic complaint about identifiers in docs not having
#    backticks. Not load-bearing for correctness; defer the cleanup pass
#    until the doc surface stabilizes.
unused_async = "allow"
doc_markdown = "allow"
